test/conformance/chainsaw/generate/clusterpolicy/cornercases/clone-source-name-exceeds-63-characters/chainsaw-step-01-apply-1-1.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: regcredregcredregcredregcredregcredregcredregcredregcredregcredregcredregcredregcredregcredregcred
  namespace: default
type: Opaque
