test/conformance/chainsaw/generate/clusterpolicy/cornercases/clone-source-name-exceeds-63-characters/01-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: generate-secret
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
