test/conformance/chainsaw/generate/clusterpolicy/cornercases/clone-source-name-exceeds-63-characters/chainsaw-step-02-assert-1-1.yaml
apiVersion: v1
kind: Secret
metadata:
  name: regcred
  namespace: production
