test/conformance/chainsaw/generate/clusterpolicy/cornercases/clone-source-name-exceeds-63-characters/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: clone-source-name-exceeds-63-characters
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: generate-secret
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
    - assert:
        file: chainsaw-step-02-assert-1-1.yaml
  - name: step-03
    try:
    - sleep:
        duration: 3s
  - name: step-04
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: Secret
          name: regcredregcredregcredregcredregcredregcredregcredregcredregcredregcredregcredregcredregcredregcred
          namespace: default
  - name: step-05
    try:
    - sleep:
        duration: 3s
  - name: step-06
    try:
    - apply:
        file: chainsaw-step-06-apply-1-1.yaml
